# metamod-source

./: .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml  main.yml
cmake/: sourcesdk.cmake
cmake/platform/: shared.cmake
cmake/targets/: core.cmake  loader.cmake
core/: metamod.cpp  metamod.h  metamod_plugins.h  vsp_bridge.cpp
core/provider/: provider_base.cpp  provider_base.h
core/provider/source/: provider_source.cpp
core/provider/source2/: provider_source2.cpp
core/sourcehook/: sh_asm_x86_64.h  sourcehook_hookmangen_x86_64.cpp  sourcehook_hookmangen_x86_64.h
loader/: gamedll.cpp  loader.cpp  loader.h
sym/: loader.lds
